--- a/modules/end-user-guide/pages/maven.adoc
+++ b/modules/end-user-guide/pages/maven.adoc
@@ -5,17 +5,18 @@
 [id="using-maven-artifact-repositories"]
 = Using Maven artifact repositories
 
-# Preparation
-* Apply nexus.cer.yaml Secret
-* Apply settings.xml.yaml ConfigMap
-* Apply init-truststore.yaml ConfigMap
+.Preparation
+. Apply nexus.cer.yaml Secret
+. Apply settings.xml.yaml ConfigMap
+. Apply init-truststore.yaml ConfigMap
 
-# Workspace init
-* Start a maven based workspace
-* Open a new terminal in the `tools` container
-* source ~/init-truststore.sh
+.Workspace init
+. Start a maven based workspace
+. Open a new terminal in the `tools` container
+. source ~/init-truststore.sh
 
 //maven/init-truststore.yaml
+[source,yaml,subs="+quotes,+attributes,+macros"]
 ----
 kind: ConfigMap
 apiVersion: v1
@@ -35,6 +36,7 @@ data:
 ----
 
 //maven/nexus.cer.yaml
+[source,yaml,subs="+quotes,+attributes,+macros"]
 ----
 kind: Secret
 apiVersion: v1
@@ -52,6 +54,7 @@ data:
 ----
 
 //maven/settings.xml.yaml
+[source,xml,subs="+quotes,+attributes,+macros"]
 ----
 kind: ConfigMap
 apiVersion: v1
