--- a/modules/end-user-guide/pages/npm.adoc
+++ b/modules/end-user-guide/pages/npm.adoc
@@ -6,6 +6,7 @@
 = Using npm artifact repositories
 
 //npm/disconnected-env.yaml
+[source,yaml,subs="+quotes,+attributes,+macros"]
 ----
 kind: ConfigMap
 apiVersion: v1
@@ -23,6 +24,7 @@ data:
 ----
 
 //npm/nexus.cer.yaml
+[source,yaml,subs="+quotes,+attributes,+macros"]
 ----
 kind: Secret
 apiVersion: v1
