--- a/modules/end-user-guide/pages/nuget.adoc
+++ b/modules/end-user-guide/pages/nuget.adoc
@@ -5,10 +5,10 @@
 [id="using-nuget-artifact-repositories"]
 = Using NuGet artifact repositories
 
-# Preparation
-* Apply nexus.cer.yaml Secret
-* Apply disconnected-env.yaml
-* Apply init-nuget.yaml ConfigMap
+.Preparation
+. Apply nexus.cer.yaml Secret
+. Apply disconnected-env.yaml
+. Apply init-nuget.yaml ConfigMap
 
 !! WARNING !!
 In DS 3.0.0 applying a ConfigMap that sets environment variables may cause infinite workspace bootlooping
@@ -17,6 +17,7 @@ If you observe this behavior, remove the ConfigMap and edit the devfile directly
 Set the appropriate environment variable in the `tools` container
 
 //nuget/disconnected-env.yaml
+[source,yaml,subs="+quotes,+attributes,+macros"]
 ----
 kind: ConfigMap
 apiVersion: v1
@@ -32,6 +33,7 @@ data:
 ----
 
 //nuget/init-nuget.yml
+[source,yaml,subs="+quotes,+attributes,+macros"]
 ----
 kind: ConfigMap
 apiVersion: v1
@@ -60,6 +62,7 @@ data:
 ----
 
 //nuget/nexus.cer.yaml
+[source,yaml,subs="+quotes,+attributes,+macros"]
 ----
 kind: Secret
 apiVersion: v1
