--- a/modules/end-user-guide/pages/go.adoc
+++ b/modules/end-user-guide/pages/go.adoc
@@ -6,6 +6,7 @@
 = Using Go artifact repositories
 
 //go/disconnected-env.yaml
+[source,yaml,subs="+quotes,+attributes,+macros"]
 ----
 kind: ConfigMap
 apiVersion: v1
@@ -23,6 +24,7 @@ data:
 ----
 
 //go/nexus.cer.yaml
+[source,yaml,subs="+quotes,+attributes,+macros"]
 ----
 kind: Secret
 apiVersion: v1
