--- a/modules/end-user-guide/pages/gradle.adoc
+++ b/modules/end-user-guide/pages/gradle.adoc
@@ -5,17 +5,18 @@
 [id="using-gradle-artifact-repositories"]
 = Using Gradle artifact repositories
 
-# Preparation
-* Apply nexus.cer.yaml Secret
-* Apply init-truststore.yaml ConfigMap
-* Apply init-gradle.yaml ConfigMap
+.Preparation
+. Apply nexus.cer.yaml Secret
+. Apply init-truststore.yaml ConfigMap
+. Apply init-gradle.yaml ConfigMap
 
-# Workspace init
-* Start a gradle based workspace
-* Open a new terminal in the `tools` container
-* source ~/init-truststore.sh
+.Workspace init
+. Start a gradle based workspace
+. Open a new terminal in the `tools` container
+. source ~/init-truststore.sh
 
 //gradle/init-gradle.yml
+[source,yaml,subs="+quotes,+attributes,+macros"]
 ----
 kind: ConfigMap
 apiVersion: v1
@@ -44,6 +45,7 @@ data:
 ----
 
 //gradle/init-truststore.yaml
+[source,yaml,subs="+quotes,+attributes,+macros"]
 ----
 kind: ConfigMap
 apiVersion: v1
@@ -63,6 +65,7 @@ data:
 ----
 
 //gradle/nexus.cer.yaml
+[source,yaml,subs="+quotes,+attributes,+macros"]
 ----
 kind: Secret
 apiVersion: v1
