Added rough procedure for Go, npm and Python
Signed-off-by: Tibor Dancs <tdancs@redhat.com>

--- a/modules/end-user-guide/pages/go.adoc
+++ b/modules/end-user-guide/pages/go.adoc
@@ -5,6 +5,16 @@
 [id="using-go-artifact-repositories"]
 = Using Go artifact repositories
 
+.Preparation
+. Apply nexus.cer.yaml Secret
+. Apply disconnected-env.yaml
+
+!! WARNING !!
+In DS 3.0.0 applying a ConfigMap that sets environment variables may cause infinite workspace bootlooping
+If you observe this behavior, remove the ConfigMap and edit the devfile directly
+
+Set the appropriate environment variable in the `tools` container
+
 //go/disconnected-env.yaml
 [source,yaml,subs="+quotes,+attributes,+macros"]
 ----
