--- a/modules/administration-guide/pages/upgrading-che-7-41-on-openshift.adoc
+++ b/modules/administration-guide/pages/upgrading-che-7-41-on-openshift.adoc
@@ -61,7 +61,7 @@ chmod +x ./1-prepare.sh ./2-migrate.sh ./3-subscribe.sh ./4-wait.sh
 
 [IMPORTANT]
 ====
-If migration failed, use the following steps to rollback to previous {prod-short} installation.
+If migration fails, use the following steps to roll back to the previous {prod-prev-short} installation.
 
 . Set the environment variables to use in the migration scripts:
 +
@@ -92,6 +92,6 @@ chmod +x ./rollback.sh
 
 .Verification
 
-* Open {prod-short} dashboard and log in.
+* Open {prod-prev-short} dashboard and log in.
 
 ====
