--- a/modules/administration-guide/pages/removing-user-data.adoc
+++ b/modules/administration-guide/pages/removing-user-data.adoc
@@ -15,7 +15,9 @@ Following this procedure makes the service compliant to EU General Data Protecti
 
 .Prerequisites
 
-* Log in to {prod-short} with a user with `admin` privileges. See xref:configuring-the-administrative-user.adoc[].
+* An active session with administrative permissions to {prod-short}. See xref:configuring-the-administrative-user.adoc[].
+
+* An active `oc` session with administrative permissions to the OpenShift cluster. See link:https://docs.openshift.com/container-platform/{ocp4-ver}/cli_reference/openshift_cli/getting-started-cli.html[Getting started with the OpenShift CLI].
 
 .Procedure
 
@@ -28,7 +30,7 @@ Following this procedure makes the service compliant to EU General Data Protecti
 //   'pass:c,m,a,q[+https:+//__<{prod-host}>__]/api/user/find?name=__<username>__'
 // ----
 
-. Remove the __<id>__ user data that {prod-short} server manages: navigate to pass:c,m,a,q[+https:+//__<{prod-host}>__]/swagger/#/user/remove, click btn:[Try it out], set *id*: __<id>__, and click btn:[Execute]. Expect a `204` response code:
+. Remove the __<id>__ user data that {prod-short} server manages, such as user preferences: navigate to pass:c,m,a,q[+https:+//__<{prod-host}>__]/swagger/#/user/remove, click btn:[Try it out], set *id*: __<id>__, and click btn:[Execute]. Expect a `204` response code:
 // +
 // [subs="+quotes,macros,attributes"]
 // ----
@@ -37,21 +39,15 @@ Following this procedure makes the service compliant to EU General Data Protecti
 //   'pass:c,m,a,q[+https:+//__<{prod-host}>__]/api/user/__<id>__'
 // ----
 
-. Optionally, remove the {orch-name} resources bound to the user.
-
-
-.Verification
-
-* {prod-short} server API reports that the user doesn't exist. Expect a `404` response code:
+. Delete the user {orch-namespace} to remove all {orch-name} resources bound to the user, such as workspaces, secrets, and configmaps.
 +
-[subs="+quotes,macros,attributes"]
+[source,shell,subs="+quotes,macros,attributes"]
 ----
-$ curl -i -X DELETE \
-  --cookie '_oauth_proxy=__<token>__' \
-  'pass:c,m,a,q[+https:+//__<{prod-host}>__]/api/user/find?name=__<username>__'
+$ {orch-cli} delete namespace __<username>__-{prod-id-short}
 ----
 
 .Additional resources
 
 * xref:managing-workloads-using-the-che-server-api.adoc[].
+* xref:configuring-workspace-target-namespace.adoc[].
 * To remove the data of all users, see xref:uninstalling-che.adoc[].
