fix: typo in navigation file

--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -68,7 +68,7 @@
 **** xref:configuring-oauth-1-for-bitbucket.adoc[]
 *** xref:configuring-the-administrative-user.adoc[]
 *** xref:removing-user-data.adoc[]
-* xref:managing-workloads-using-the-che-server-api.adoc[].
+* xref:managing-workloads-using-the-che-server-api.adoc[]
 * xref:upgrading-che.adoc[]
 ** xref:upgrading-the-chectl-management-tool.adoc[]
 ** xref:upgrading-che-7-41-on-openshift.adoc[]
