procedures: artifact repos (#2352)
Co-authored-by: Tibor Dancs <tdancs@redhat.com>

--- a/modules/end-user-guide/nav.adoc
+++ b/modules/end-user-guide/nav.adoc
@@ -13,6 +13,13 @@
 * xref:selecting-an-ide.adoc[]
 * xref:using-credentials-and-configurations-in-workspaces.adoc[]
 ** xref:using-a-git-credentials-store.adoc[]
+** xref:enabling-artifact-repositories-in-a-restricted-environment.adoc[]
+*** xref:enabling-maven-artifact-repositories.adoc[]
+*** xref:enabling-gradle-artifact-repositories.adoc[]
+*** xref:enabling-npm-artifact-repositories.adoc[]
+*** xref:enabling-python-artifact-repositories.adoc[]
+*** xref:enabling-go-artifact-repositories.adoc[]
+*** xref:enabling-nuget-artifact-repositories.adoc[]
 ** xref:creating-image-pull-secrets.adoc[]
 ** xref:mounting-secrets.adoc[]
 ** xref:mounting-configmaps.adoc[]
