fix: xml issue when downstreaming

--- a/modules/end-user-guide/pages/enabling-maven-artifact-repositories.adoc
+++ b/modules/end-user-guide/pages/enabling-maven-artifact-repositories.adoc
@@ -35,7 +35,7 @@ data:
 
 . Apply the ConfigMap to create the `settings.xml` file:
 +
-[source,xml,subs="+quotes,+attributes,+macros"]
+[source,yaml,subs="+quotes"]
 ----
 kind: ConfigMap
 apiVersion: v1
