CRW-3052 update to newer multiarch prometheus v2.36.0 and older (but more CVE-friendly) registry.redhat.io/rhel8/grafana:7 (could also decide to use docker.io/grafana/grafana:8.5.5 or docker.io/grafana/grafana-oss:8.5.5)
Change-Id: If3c014c37f2db24f42eafdd0c8868ee319d54db7
Signed-off-by: Nick Boldt <nickboldt@gmail.com>

--- a/modules/administration-guide/pages/installing-prometheus-and-grafana.adoc
+++ b/modules/administration-guide/pages/installing-prometheus-and-grafana.adoc
@@ -74,7 +74,7 @@ spec:
         app: grafana
     spec:
       containers:
-      - image: grafana/grafana:8.4.5
+      - image: registry.redhat.io/rhel8/grafana:7
         name: grafana
         ports:
         - containerPort: 3000
@@ -96,7 +96,7 @@ spec:
         app: prometheus
     spec:
       containers:
-      - image: prom/prometheus:v2.34.0
+      - image: quay.io/prometheus/prometheus:v2.36.0
         name: prometheus
         ports:
         - containerPort: 9090
