--- a/modules/end-user-guide/pages/adding-a-vscode-extension.adoc
+++ b/modules/end-user-guide/pages/adding-a-vscode-extension.adoc
@@ -61,7 +61,7 @@ Define the plug-ins to be installed in the workspace.
 +
 [source,yaml,subs="+quotes"]
 ----
-- id: redhat/java  
+- id: redhat/java/latest
 ----
 
 === Changing the default memory limit
@@ -78,7 +78,7 @@ Override container settings such as the memory limit.
 [source,yaml,subs="+quotes"]
 ----
 
-  - id: redhat/java  
+  - id: redhat/java/latest
     override:  
       sidecar:  
         memoryLimit: 2Gi
@@ -97,7 +97,7 @@ Override the default preferences of the Visual Studio Code extension for the wor
 +
 [source,yaml,subs="+quotes"]
 ----
-  - id: redhat/java  
+  - id: redhat/java/latest
     override:  
       preferences:
         java.server.launchMode: LightWeight
@@ -156,6 +156,6 @@ metadata:
   name: my-example  
 attributes:  
   .che/che-theia-plugins.yaml: |  
-    - id: redhat/java
+    - id: redhat/java/latest
 ----
 
