--- a/modules/end-user-guide/examples/snip_che-editor-key-values.adoc
+++ b/modules/end-user-guide/examples/snip_che-editor-key-values.adoc
@@ -14,7 +14,7 @@
 
 | link:https://github.com/che-incubator/che-code[Visual Studio Code]
 | `che-incubator/che-code/insiders`
-| VS Code Insiders version packaged to run on Kubernetes
+| Visual Studio Code Insiders version packaged to run on Kubernetes
 
 | link:https://www.jetbrains.com/help/idea/discover-intellij-idea.html[IntelliJ IDEA]
 | `che-incubator/che-idea/latest`
@@ -22,7 +22,7 @@
 
 | link:https://www.jetbrains.com/help/idea/discover-intellij-idea.html[IntelliJ IDEA]
 | `che-incubator/che-idea/next`
-| Community Edition - nigthly version
+| Community Edition - development version
 
 | link:https://www.jetbrains.com/help/pycharm/quick-start-guide.html[PyCharm]
 | `che-incubator/che-pycharm/latest`
