--- a/modules/end-user-guide/examples/snip_che-editor-key-values.adoc
+++ b/modules/end-user-guide/examples/snip_che-editor-key-values.adoc
@@ -12,7 +12,7 @@
 | `eclipse/che-theia/next`
 | When using the `next` link:https://github.com/che-incubator/chectl/[chectl] channel, this IDE loads as a default without the URL parameter.
 
-| link:https://github.com/che-incubator/che-code[Visual Studio Code]
+| link:https://github.com/che-incubator/che-code[Visual Studio Code - Open Source]
 | `che-incubator/che-code/insiders`
 | Visual Studio Code Insiders version packaged to run on Kubernetes
 
