--- a/modules/end-user-guide/examples/snip_che-editor-key-values.adoc
+++ b/modules/end-user-guide/examples/snip_che-editor-key-values.adoc
@@ -30,6 +30,6 @@
 
 | link:https://www.jetbrains.com/help/pycharm/quick-start-guide.html[PyCharm]
 | `che-incubator/che-pycharm/next`
-| Community Edition - nightly version
+| Community Edition - development version
 
 |===
