--- a/modules/end-user-guide/examples/snip_che-editor-key-values.adoc
+++ b/modules/end-user-guide/examples/snip_che-editor-key-values.adoc
@@ -12,16 +12,24 @@
 | `eclipse/che-theia/next`
 | When using the `next` link:https://github.com/che-incubator/chectl/[chectl] channel, this IDE loads as a default without the URL parameter.
 
-| link:https://github.com/che-incubator/che-code[Che-Code]
+| link:https://github.com/che-incubator/che-code[Visual Studio Code - Open Source]
 | `che-incubator/che-code/insiders`
-|
+| Visual Studio Code Insiders version packaged to run on Kubernetes
 
-| link:https://www.jetbrains.com/help/idea/discover-intellij-idea.html[IntelliJ IDEA Community Edition]
-| `che-incubator/intellij-community/latest`
-|
+| link:https://www.jetbrains.com/help/idea/discover-intellij-idea.html[IntelliJ IDEA]
+| `che-incubator/che-idea/latest`
+| Community Edition - stable version
+
+| link:https://www.jetbrains.com/help/idea/discover-intellij-idea.html[IntelliJ IDEA]
+| `che-incubator/che-idea/next`
+| Community Edition - development version
 
 | link:https://www.jetbrains.com/help/pycharm/quick-start-guide.html[PyCharm]
-| `che-incubator/pycharm/latest`
-|
+| `che-incubator/che-pycharm/latest`
+| Community Edition - stable version
+
+| link:https://www.jetbrains.com/help/pycharm/quick-start-guide.html[PyCharm]
+| `che-incubator/che-pycharm/next`
+| Community Edition - development version
 
 |===
