--- a/modules/administration-guide/pages/configuring-che-hostname.adoc
+++ b/modules/administration-guide/pages/configuring-che-hostname.adoc
@@ -55,9 +55,9 @@ app.kubernetes.io/part-of=che.eclipse.org -n {prod-namespace}
 [subs="+quotes,+attributes"]
 ----
 spec:
-  server:
-    cheHost: <hostname>         <1>
-    cheHostTLSSecret: <secret>  <2>
+  networking:
+    hostname: <hostname>     <1>
+    tlsSecretName: <secret>  <2>
 ----
 <1> Custom {prod} server hostname
 <2> The TLS secret name
