--- a/modules/administration-guide/pages/configuring-the-administrative-user.adoc
+++ b/modules/administration-guide/pages/configuring-the-administrative-user.adoc
@@ -16,9 +16,10 @@ The default installation enables the administrative privileges for the `admin` u
 [source,yaml,subs="+attributes,+quotes,macros"]
 ----
 spec:
- server:
-   customCheProperties:
-     pass:[CHE_SYSTEM_ADMIN__NAME]: '__<admin>__'
+  components:
+    cheServer:
+      extraProperties:
+        pass:[CHE_SYSTEM_ADMIN__NAME]: '__<admin>__'
 ----
 
 .Additional resources
