--- a/modules/administration-guide/pages/configuring-workspace-target-namespace.adoc
+++ b/modules/administration-guide/pages/configuring-workspace-target-namespace.adoc
@@ -30,8 +30,10 @@ A valid {orch-namespace} name template follows these conventions:
 [source,yaml,subs="+quotes,+attributes"]
 ----
 spec:
-  server:
-    workspaceNamespaceDefault: __<workspace_namespace_template_>__
+  components:
+    devEnvironments:
+      defaultNamespace:
+        template: __<workspace_namespace_template_>__
 ----
 +
 .User workspaces {orch-namespace} name template examples
