--- a/modules/administration-guide/pages/creating-a-telemetry-plugin.adoc
+++ b/modules/administration-guide/pages/creating-a-telemetry-plugin.adoc
@@ -401,8 +401,8 @@ Set the telemetry plug-in as a default plug-in. Default plug-ins are applied on 
 +
 ----
 spec:
-  server:
-    workspacesDefaultPlugins:
+  devEnvironments:
+    defaultPlugins:
     - editor: eclipse/che-theia/next     <1>
       plugins:                           <2>
       - 'http://apache-che.apps-crc.testing/plugin.yaml'
