--- a/modules/administration-guide/pages/deploying-che-with-support-for-git-repositories-with-self-signed-certificates.adoc
+++ b/modules/administration-guide/pages/deploying-che-with-support-for-git-repositories-with-self-signed-certificates.adoc
@@ -47,8 +47,9 @@ $ {orch-cli} label configmap che-git-self-signed-cert \
 [source,yaml,subs="+attributes"]
 ----
 spec:
-  server:
-    gitSelfSignedCert: true
+  devEnvironments:
+    trustedCerts:
+      gitTrustedCertsConfigMapName: che-git-self-signed-cert
 ----
 
 .Verification steps
