--- a/modules/administration-guide/pages/the-woopra-telemetry-plugin.adoc
+++ b/modules/administration-guide/pages/the-woopra-telemetry-plugin.adoc
@@ -31,8 +31,8 @@ To enable the Woopra plug-in on the {prod} installation:
 [source,yaml]
 ----
 spec:
-  server:
-    workspacesDefaultPlugins:
+  devEnvironments:
+    defaultPlugins:
     - editor: eclipse/che-theia/next     <1>
       plugins:                           <2>
       - 'https://your-web-server/plugin.yaml'
