--- a/modules/administration-guide/partials/con_logging-http-traffic.adoc
+++ b/modules/administration-guide/partials/con_logging-http-traffic.adoc
@@ -10,9 +10,10 @@
 [source,yaml]
 ----
 spec:
-  server:
-    customCheProperties:
-      CHE_LOGGER_CONFIG: "che.infra.request-logging=TRACE"
+  components:
+    cheServer:
+      extraProperties:
+        CHE_LOGGER_CONFIG: "che.infra.request-logging=TRACE"
 ----
 
 .Additional resources
