--- a/modules/administration-guide/partials/con_understanding-che-server-advanced-configuration.adoc
+++ b/modules/administration-guide/partials/con_understanding-che-server-advanced-configuration.adoc
@@ -23,9 +23,10 @@ map of additional environment variables to apply to the {prod-short} server comp
 [source,yaml,subs="+quotes,+attributes,+macros"]
 ----
 spec:
-  server:
-    customCheProperties:
-      pass:[CHE_WORKSPACE_DEFAULT__MEMORY__LIMIT__MB]: "2048"
+  components:
+    cheServer:
+      extraProperties:
+        pass:[CHE_WORKSPACE_DEFAULT__MEMORY__LIMIT__MB]: "2048"
 ----
 ====
 
