--- a/modules/administration-guide/partials/proc_configuring-server-logging.adoc
+++ b/modules/administration-guide/partials/proc_configuring-server-logging.adoc
@@ -10,9 +10,10 @@
 [source,yaml,subs="+attributes,+quotes"]
 ----
 spec:
-  server:
-    customCheProperties:
-      CHE_LOGGER_CONFIG: "__<key1=value1,key2=value2>__" <1>
+  components:
+    cheServer:
+      extraProperties:
+        CHE_LOGGER_CONFIG: "__<key1=value1,key2=value2>__" <1>
 ----
 <1> Comma-separated list of key-value pairs, where keys are the names of the loggers as seen
 in the {prod-short} server log output and values are the required log levels.
@@ -22,9 +23,10 @@ in the {prod-short} server log output and values are the required log levels.
 [source,yaml]
 ----
 spec:
-  server:
-    customCheProperties:
-      CHE_LOGGER_CONFIG: "org.eclipse.che.api.workspace.server.WorkspaceManager=DEBUG" 
+  components:
+    cheServer:
+      extraProperties:
+        CHE_LOGGER_CONFIG: "org.eclipse.che.api.workspace.server.WorkspaceManager=DEBUG"
 ----
 ====
 
