--- a/modules/administration-guide/partials/proc_enabling-and-exposing-che-metrics.adoc
+++ b/modules/administration-guide/partials/proc_enabling-and-exposing-che-metrics.adoc
@@ -13,7 +13,8 @@ You can configure this behaviour.
 [source,yaml,subs="+attributes,+quotes"]
 ----
 spec:
-  metrics:
-    enable: __<boolean>__ <1>
+  components:
+    metrics:
+      enable: __<boolean>__ <1>
 ----
 <1> `true` to enable, `false` to disable.
