--- a/modules/administration-guide/pages/configuring-the-number-of-workspaces-that-a-user-can-create.adoc
+++ b/modules/administration-guide/pages/configuring-the-number-of-workspaces-that-a-user-can-create.adoc
@@ -26,9 +26,10 @@ If the value is `-1`, users can create an unlimited number of workspaces. If the
 [source,yaml,subs="+quotes"]
 ----
 spec:
-  server:
-    customCheProperties:
-      CHE_LIMITS_USER_WORKSPACES_COUNT: "__<number-of-workspaces>__"
+  components:
+    cheServer:
+      extraProperties:
+        CHE_LIMITS_USER_WORKSPACES_COUNT: "__<number-of-workspaces>__"
 ----
 
 .Additional resources
