--- a/modules/administration-guide/partials/snip_preparing-images-for-a-restricted-environment.adoc
+++ b/modules/administration-guide/partials/snip_preparing-images-for-a-restricted-environment.adoc
@@ -1,15 +1,19 @@
 // Included in:
-// modules/administration-guide/pages/installing-che-in-a-restricted-environment.adoc
-// modules/administration-guide/pages/upgrading-che-using-the-cli-management-tool-in-restricted-environment.adoc
+// ../pages/installing-che-in-a-restricted-environment.adoc
+// ../pages/upgrading-che-using-the-cli-management-tool-in-restricted-environment.adoc
+
 
 * The OpenShift cluster has at least 64 GB of disk space.
 
-* The OpenShift cluster is ready to operate on a restricted network, and the OpenShift control plane has access to the public Internet. See link:https://docs.openshift.com/container-platform/latest/operators/admin/olm-restricted-networks.html[Using Operator Lifecycle Manager on restricted networks].
+* The OpenShift cluster is ready to operate on a restricted network, and the OpenShift control plane has access to the public internet. See link:https://docs.openshift.com/container-platform/{ocp4-ver}/installing/disconnected_install/index.html[About disconnected installation mirroring] and link:https://docs.openshift.com/container-platform/{ocp4-ver}/operators/admin/olm-restricted-networks.html[Using Operator Lifecycle Manager on restricted networks].
+
+// NOTE for testers: don't use the internal registry present on `crc`.
 
 * An active `oc` session with administrative permissions to the OpenShift cluster. See link:https://docs.openshift.com/container-platform/{ocp4-ver}/cli_reference/openshift_cli/getting-started-cli.html[Getting started with the OpenShift CLI].
 
-* An active `oc` session to the `registry.redhat.io` Red Hat Ecosystem Catalog. See: link:https://access.redhat.com/RegistryAuthentication[Red Hat Container Registry authentication].
+* An active `oc registry` session to the `registry.redhat.io` Red Hat Ecosystem Catalog. See: link:https://access.redhat.com/RegistryAuthentication[Red Hat Container Registry authentication].
 
+// NOTE for testers:
 // $ oc registry login --registry registry.redhat.io --auth-basic=__<user>:__<password>__
 
 * `opm`. See link:https://docs.openshift.com/container-platform/{ocp4-ver}/cli_reference/opm/cli-opm-install.html[Installing the `opm` CLI].
@@ -19,9 +23,6 @@
 * `podman`. See link:https://podman.io/getting-started/installation[Installing Podman].
 
 * An active `skopeo` session with administrative access to the __<my_registry>__ registry. See link:https://github.com/containers/skopeo/blob/main/install.md[Installing Skopeo], link:https://github.com/containers/skopeo#authenticating-to-a-registry[Authenticating to a registry], and link:https://docs.openshift.com/container-platform/{ocp4-ver}/installing/disconnected_install/installing-mirroring-installation-images.html[Mirroring images for a disconnected installation].
-
-// NOTE: Activate a `skopeo` session on a `crc` instance:
-// $ skopeo login -u kubeadmin -p $(oc whoami -t) --tls-verify=false default-route-openshift-image-registry.apps-crc.testing
 
 * `{prod-cli}` for {prod-short} version {prod-ver}. See xref:installing-the-chectl-management-tool.adoc[].
 
@@ -36,6 +37,7 @@ $ bash prepare-restricted-environment.sh \
   --devworkspace_operator_index "{devworkspace-operator-index}" \
   --devworkspace_operator_version "v{devworkspace-operator-version-patch}" \
   --prod_operator_index "{prod-operator-index}" \
+  --prod_operator_bundle_name "{prod-operator-bundle-name}" \
   --prod_operator_package_name "{prod-operator-package-name}" \
   --prod_operator_version "v{prod-ver-patch}" \
   --my_registry "__<my_registry>__"
