--- a/modules/administration-guide/pages/calculating-che-resource-requirements.adoc
+++ b/modules/administration-guide/pages/calculating-che-resource-requirements.adoc
@@ -11,7 +11,7 @@
 
 :context: calculating-{prod-id-short}-resource-requirements
 
-The {prod-short} Operator, {devworkspace} Controller, and user workspaces consist of a set of pods. The pods contribute to the resource consumption in terms of CPU and RAM limits and requests. This section describes how to calculate resources, such as memory and CPU, required to run {prod}.
+The {prod-short} Operator, {devworkspace} Controller, and user workspaces consist of a set of pods. The pods contribute to the resource consumption in terms of CPU and RAM limits and requests. Learn how to calculate resources, such as memory and CPU, required to run {prod}.
 
 include::partial$con_operator-requirements.adoc[leveloffset=+1]
 
