fix: Update GitLab configuration page
Signed-off-by: Igor Vinokur <ivinokur@redhat.com>

--- a/modules/administration-guide/partials/proc_applying-the-gitlab-authorized-application-secret.adoc
+++ b/modules/administration-guide/partials/proc_applying-the-gitlab-authorized-application-secret.adoc
@@ -42,7 +42,7 @@ data:
   secret: __<Base64_GitLab_Client_Secret>__ <4>
 ----
 <1> The {prod-short} namespace. The default is `{prod-namespace}`.
-<2> The *GitLab server URL*.
+<2> The *GitLab server URL*. Use `https​://gitlab.com` for the `SAAS` version.
 <3> The Base64-encoded *GitLab Application ID*.
 <4> The Base64-encoded *GitLab Client Secret*.
 
