fix: fixed broken link + small intro edit (#2367)

--- a/modules/administration-guide/pages/calculating-che-resource-requirements.adoc
+++ b/modules/administration-guide/pages/calculating-che-resource-requirements.adoc
@@ -11,9 +11,7 @@
 
 :context: calculating-{prod-id-short}-resource-requirements
 
-This section describes how to calculate resources, such as memory and CPU, required to run {prod}.
-
-The {prod-short} Operator, {devworkspace} Controller, and user workspaces consist of a set of pods. Those pods contribute to the resource consumption in terms of CPU and RAM limits and requests.
+The {prod-short} Operator, {devworkspace} Controller, and user workspaces consist of a set of pods. The pods contribute to the resource consumption in terms of CPU and RAM limits and requests. Learn how to calculate resources, such as memory and CPU, required to run {prod}.
 
 include::partial$con_operator-requirements.adoc[leveloffset=+1]
 
@@ -28,6 +26,6 @@ include::partial$con_a-workspace-example.adoc[leveloffset=+1]
 * xref:architecture-overview.adoc[]
 * xref:understanding-the-checluster-custom-resource.adoc[]
 * link:https://github.com/eclipse-che/che-plugin-registry[{prod-short} plug-ins registry repository]
-* {link-manage-compute-resources-container}
+* link:https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/[Kubernetes resource management for pods and containers]
 
 :context: {parent-context-of-calculating-che-resource-requirements}
