fix: Add startingCSV to subscriptions
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/modules/administration-guide/pages/upgrading-che-7-41-on-openshift.adoc
+++ b/modules/administration-guide/pages/upgrading-che-7-41-on-openshift.adoc
@@ -51,6 +51,7 @@ export PRODUCT_OPERATOR_NAME={prod-operator}
 export PRODUCT_OLM_STABLE_CHANNEL={prod-stable-channel}
 export PRODUCT_OLM_CATALOG_SOURCE={prod-stable-channel-catalog-source}
 export PRODUCT_OLM_PACKAGE={prod-stable-channel-package}
+export PRODUCT_OLM_STARTING_CSV={prod-stable-channel-starting-csv}
 export PRE_MIGRATION_PRODUCT_OPERATOR_NAMESPACE={prod-namespace} # <2>
 export PRE_MIGRATION_PRODUCT_SHORT_ID={pre-migration-prod-id-short}
 export PRE_MIGRATION_PRODUCT_DEPLOYMENT_NAME={pre-migration-prod-deployment}
@@ -100,6 +101,7 @@ export PRE_MIGRATION_PRODUCT_OPERATOR_NAME={pre-migration-prod-operator}
 export PRE_MIGRATION_PRODUCT_OLM_PACKAGE={pre-migration-prod-package}
 export PRE_MIGRATION_PRODUCT_OLM_CHANNEL={pre-migration-prod-channel}
 export PRE_MIGRATION_PRODUCT_OLM_CATALOG_SOURCE={pre-migration-prod-catalog-source}
+export PRE_MIGRATION_PRODUCT_OLM_STARTING_CSV={pre-migration-prod-starting-csv}
 ----
 <1> `{prod-namespace}` or another {orch-namespace} where {prod-prev-short} was previously installed.
 <2> `{prod-namespace}` or another {orch-namespace} where {prod-prev-short} was previously installed.
