chore: update Dockerfile, add container-build workflow chore: migration `master` -> `main` branch continued

--- a/CONTRIBUTING.adoc
+++ b/CONTRIBUTING.adoc
@@ -58,7 +58,7 @@ pass:[<!-- vale RedHat.write = NO -->]
 
 . Contributor submits a code pull request in one of the Che repositories with a `status/doc-impact` label.
 
-. The author of the code pull request or the reviewer ensures the code pull request contains a reference to a documentation pull request for the `master` branch of the `che-docs` repository:
+. The author of the code pull request or the reviewer ensures the code pull request contains a reference to a documentation pull request for the `main` branch of the `che-docs` repository:
 
 .. The author of the code pull request or the reviewer provides a documentation pull request that the members of the documentation team can merge without further editing.
 
@@ -70,7 +70,7 @@ pass:[<!-- vale RedHat.write = NO -->]
 
 . Merge the code pull request into the `che` repository, for next milestone `x.y.z`.
 
-. Merge the documentation content for next milestone `x.y.z` into the `master` branch of the `che-docs` repository. 
+. Merge the documentation content for next milestone `x.y.z` into the `main` branch of the `che-docs` repository. 
 
 . Release `che` milestone `x.y.z`.
 
