--- a/RELEASE.adoc
+++ b/RELEASE.adoc
@@ -32,7 +32,7 @@ asciidoc:
     prod-ver-major: "_<major>_"
 ----
 
-. Edit the link:https://github.com/eclipse-che/che-docs/blob/publication-builder/publication-builder-antora-playbook.yml[`publication-builder-antora-playbook.yml` file in the `publication-builder` branch]. Change the latest branch to "__<major>__.__<minor>__.x". Keep the other branches (`7.43.x` and `master`).
+. Edit the link:https://github.com/eclipse-che/che-docs/blob/publication-builder/publication-builder-antora-playbook.yml[`publication-builder-antora-playbook.yml` file in the `publication-builder` branch]. Change the latest branch to "__<major>__.__<minor>__.x". Keep the other branches (`7.43.x` and `main`).
 +
 [source,yaml,subs="+attributes,+quotes"]
 ----
@@ -43,7 +43,7 @@ content:
       branches:
         - "__<major>__.__<minor>__.x"
         - "7.41.x"
-        - master
+        - main
 # [...]
 ----
 
