--- a/modules/hosted-che/partials/ref_about-hosted-che.adoc
+++ b/modules/hosted-che/partials/ref_about-hosted-che.adoc
@@ -11,7 +11,7 @@ The new service is part of the link:https://developers.redhat.com/developer-sand
 
 == Differences between Eclipse Che and {rh-os-devspaces}
 
-{rh-os-devspaces} is the product that is built from the Eclipse Che project. The product is normally two versions behind the project. Red Hat also provides licensing, packaging, and support, so {rh-os-devspaces} is considered a more stable product than the upstream Eclipse Che project. See link:https://access.redhat.com/documentation/en-us/red_hat_openshift_devspaces/3.0/html/release_notes_and_known_issues/about-devspaces_crw[About {rh-os-devspaces}].
+{rh-os-devspaces} is the product that is built from the Eclipse Che project. The product is normally two versions behind the project. Red Hat also provides licensing, packaging, and support, so {rh-os-devspaces} is considered a more stable product than the upstream Eclipse Che project. See link:https://access.redhat.com/documentation/en-us/red_hat_openshift_dev_spaces/3.0/html-single/release_notes_and_known_issues/index#about-devspaces_devspaces[About {rh-os-devspaces}].
 
 NOTE: link:https://workspaces.openshift.com/[Eclipse Che hosted by Red Hat] provides both {rh-os-devspaces} product-specific, as well as Eclipse Che community devfiles on the "Get Started" tab of the User Dashboard.
 
