--- a/modules/administration-guide/pages/installing-prometheus-and-grafana.adoc
+++ b/modules/administration-guide/pages/installing-prometheus-and-grafana.adoc
@@ -9,7 +9,7 @@
 [id="installing-prometheus-and-grafana"]
 = Installing Prometheus and Grafana
 
-You can install Prometheus and Grafana by applying `template.yaml` which provides an example monitoring stack consisting of basic configuration, Deployments and Services to get started with Prometheus and Grafana.
+You can install Prometheus and Grafana by applying `template.yaml`. The `template.yaml` file in this example provides a monitoring stack of basic configuration, Deployments and Services to get started with Prometheus and Grafana.
 
 Alternatively, you can use the link:https://github.com/prometheus-operator/prometheus-operator[Prometheus Operator] and link:https://github.com/grafana-operator/grafana-operator[Grafana Operator].
 
