--- a/modules/administration-guide/pages/installing-prometheus-and-grafana.adoc
+++ b/modules/administration-guide/pages/installing-prometheus-and-grafana.adoc
@@ -19,7 +19,7 @@ Alternatively, you can use the link:https://github.com/prometheus-operator/prome
 
 .Procedure
 
-For this example monitoring stack, Prometheus and Grafana will be installed in a new {orch-namespace} called `monitoring`. To install Prometheus and Grafana by using `template.yaml`:
+To install Prometheus and Grafana by using `template.yaml`:
 
 . Create a new {orch-namespace} called `monitoring`:
 +
