--- a/modules/administration-guide/pages/installing-prometheus-and-grafana.adoc
+++ b/modules/administration-guide/pages/installing-prometheus-and-grafana.adoc
@@ -21,7 +21,7 @@ Alternatively, you can use the link:https://github.com/prometheus-operator/prome
 
 To install Prometheus and Grafana by using `template.yaml`:
 
-. Create a new {orch-namespace} called `monitoring`:
+. Create a new {orch-namespace}, `monitoring`, for Prometheus and Grafana:
 +
 include::example$snip_{project-context}-create-monitoring-namespace.adoc[]
 
