--- a/modules/administration-guide/partials/proc_collecting-che-metrics-with-prometheus.adoc
+++ b/modules/administration-guide/partials/proc_collecting-che-metrics-with-prometheus.adoc
@@ -15,7 +15,7 @@ To use Prometheus to collect, store, and query JVM metrics for {prod-short} Serv
 
 . Configure Prometheus to scrape metrics from port `8087`.
 +
-NOTE: The xref:installing-prometheus-and-grafana.adoc[example monitoring stack] already creates the `prometheus-config` ConfigMap with an empty configuration. Edit the `data` field of the ConfigMap to provide the Prometheus configuration details.
+NOTE: The xref:installing-prometheus-and-grafana.adoc[example monitoring stack] already creates the `prometheus-config` ConfigMap with an empty configuration. To provide the Prometheus configuration details, edit the `data` field of the ConfigMap.
 +
 .Prometheus configuration
 ====
