--- a/modules/administration-guide/partials/proc_collecting-che-metrics-with-prometheus.adoc
+++ b/modules/administration-guide/partials/proc_collecting-che-metrics-with-prometheus.adoc
@@ -41,7 +41,7 @@ data:
 <4> Scrape metrics from port `8087`. Replace `__<{prod-short}_{orch-namespace}>__` with the {prod-short} {orch-namespace}. The default {prod-short} {orch-namespace} is `{prod-namespace}`.
 ====
 
-. Scale down and scale up the `Prometheus` Deployment to read the updated ConfigMap from the previous step.
+. Scale the `Prometheus` Deployment down and up to read the updated ConfigMap from the previous step.
 +
 [subs="+attributes,quotes"]
 ----
