--- a/modules/administration-guide/partials/proc_collecting-che-metrics-with-prometheus.adoc
+++ b/modules/administration-guide/partials/proc_collecting-che-metrics-with-prometheus.adoc
@@ -48,7 +48,7 @@ data:
 $ {orch-cli} scale --replicas=0 deployment/prometheus -n monitoring && {orch-cli} scale --replicas=1 deployment/prometheus -n monitoring
 ----
 
-.Verification steps
+.Verification
 
 . Use port forwarding to access the `Prometheus` Service locally:
 +
