--- a/modules/administration-guide/partials/proc_collecting-che-metrics-with-prometheus.adoc
+++ b/modules/administration-guide/partials/proc_collecting-che-metrics-with-prometheus.adoc
@@ -56,7 +56,7 @@ $ {orch-cli} scale --replicas=0 deployment/prometheus -n monitoring && {orch-cli
 ----
 $ {orch-cli} port-forward svc/prometheus 9090:9090 -n monitoring
 ----
-. Verify that all targets are up by viewing the targets endpoint at `localhost:9090/targets`.
+. Verify that all targets are up by viewing the `targets` endpoint at `localhost:9090/targets`.
 . Use the Prometheus console to view and query metrics:
 ** View the metrics at `localhost:9090/metrics`.
 ** Query metrics from `localhost:9090/graph`.
