--- a/modules/administration-guide/partials/proc_collecting-dev-workspace-operator-metrics-with-prometheus.adoc
+++ b/modules/administration-guide/partials/proc_collecting-dev-workspace-operator-metrics-with-prometheus.adoc
@@ -6,7 +6,7 @@ To use Prometheus to collect, store, and query metrics about the {devworkspace} 
 
 .Prerequisites
 
-* The `devworkspace-controller-metrics` Service is exposing metrics on port `8443`. This is pre-configured by default.
+* The `devworkspace-controller-metrics` Service is exposing metrics on port `8443`. This is preconfigured by default.
 
 * The `devworkspace-webhookserver` Service is exposing metrics on port `9443`. This is pre-configured by default.
 
