--- a/modules/administration-guide/partials/proc_collecting-dev-workspace-operator-metrics-with-prometheus.adoc
+++ b/modules/administration-guide/partials/proc_collecting-dev-workspace-operator-metrics-with-prometheus.adoc
@@ -82,7 +82,7 @@ data:
 <5> Scrape metrics from port `9443`. Replace `__<DWO_namespace>__` with the {orch-namespace} where the `devworkspace-webhookserver` `Service` is located.
 ====
 
-. Scale down and scale up the `Prometheus` Deployment to read the updated ConfigMap from the previous step.
+. Scale the `Prometheus` Deployment down and up to read the updated ConfigMap from the previous step.
 +
 [subs="+attributes,quotes"]
 ----
