--- a/modules/administration-guide/partials/proc_collecting-dev-workspace-operator-metrics-with-prometheus.adoc
+++ b/modules/administration-guide/partials/proc_collecting-dev-workspace-operator-metrics-with-prometheus.adoc
@@ -99,8 +99,8 @@ $ {orch-cli} port-forward svc/prometheus 9090:9090 -n monitoring
 ----
 . Verify that all targets are up by viewing the targets endpoint at `localhost:9090/targets`.
 . Use the Prometheus console to view and query metrics:
-** The metrics are available at `localhost:9090/metrics`.
-** The metrics can be queried from `localhost:9090/graph`.
+** View metrics at `localhost:9090/metrics`.
+** Query metrics from `localhost:9090/graph`.
 +
 For more information, see link:https://prometheus.io/docs/introduction/first_steps/#using-the-expression-browser[Using the expression browser].
 
