--- a/modules/administration-guide/pages/upgrading-che-7-41-on-openshift.adoc
+++ b/modules/administration-guide/pages/upgrading-che-7-41-on-openshift.adoc
@@ -7,7 +7,7 @@
 [id="upgrading-{prod-prev-id-short}-{prod-last-version-pre-dwo}-on-openshift_{context}"]
 = Upgrading {prod-prev-short} {prod-last-version-pre-dwo} on OpenShift
 
-The workspace engine and authentication system used up to and including {prod-prev-short} {prod-last-version-pre-dwo} are deprecated. Due to that, upgrading {prod-prev-short} {prod-last-version-pre-dwo} to {prod-short} {prod-ver} involves a manual procedure.
+The workspace engine and authentication system used up to and including {prod-prev-short} {prod-last-version-pre-dwo} are deprecated. Due to that, upgrading {prod-prev-short} {prod-last-version-pre-dwo} to {prod-short} {prod-ver} involves running upgrade scripts.
 
 include::partial$proc_manually-upgrading-che-7-41-on-openshift.adoc[leveloffset=+1]
 include::partial$proc_rolling-the-upgrade-back-to-che-7-41-on-openshift.adoc[leveloffset=+1]
