--- a/modules/administration-guide/partials/proc_manually-upgrading-che-7-41-on-openshift.adoc
+++ b/modules/administration-guide/partials/proc_manually-upgrading-che-7-41-on-openshift.adoc
@@ -1,3 +1,5 @@
+:_content-type: PROCEDURE
+
 :parent-context-upgrading-of-che-7-41-on-openshift: {context}
 
 [id="manually-upgrading-{prod-prev-id-short}-{prod-last-version-pre-dwo}-on-openshift_{context}"]
