--- a/modules/administration-guide/partials/proc_rolling-the-upgrade-back-to-che-7-41-on-openshift.adoc
+++ b/modules/administration-guide/partials/proc_rolling-the-upgrade-back-to-che-7-41-on-openshift.adoc
@@ -1,3 +1,5 @@
+:_content-type: PROCEDURE
+
 :parent-context-of-upgrading-che-7-41-on-openshift: {context}
 
 [id="rolling-the-upgrade-back-to-{prod-prev-id-short}-{prod-last-version-pre-dwo}-on-openshift_{context}"]
