--- a/modules/end-user-guide/pages/configuring-a-git-provider-access-token.adoc
+++ b/modules/end-user-guide/pages/configuring-a-git-provider-access-token.adoc
@@ -10,7 +10,7 @@ If xref:administration-guide:oauth-for-github-gitlab-or-bitbucket.adoc[OAuth for
 
 Apply the {kubernetes} Secret in your user {orch-namespace} of the {orch-name} cluster of your organization's {prod-short} instance.
 
-When you apply the Secret, you can create a factory from private GitHub, GitLab or Bitbucket-server repository.
+When you apply the Secret, you can create a factory from private GitHub, GitLab, or Bitbucket-server repository.
 
 .Prerequisites
 
