--- a/modules/end-user-guide/pages/configuring-a-git-provider-access-token.adoc
+++ b/modules/end-user-guide/pages/configuring-a-git-provider-access-token.adoc
@@ -31,7 +31,7 @@ metadata:
     app.kubernetes.io/component: scm-personal-access-token
     app.kubernetes.io/part-of: che.eclipse.org
   annotations:
-    che.eclipse.org/che-userid: <che user id> <1>
+    che.eclipse.org/che-userid: _<Che user ID>_ <1>
     che.eclipse.org/scm-personal-access-token-name: <git provider name, e.g. github>
     che.eclipse.org/scm-url: <git provider endpoint> <2>
     che.eclipse.org/scm-userid: <git provider user id> <3>
