--- a/modules/end-user-guide/pages/configuring-a-git-provider-access-token.adoc
+++ b/modules/end-user-guide/pages/configuring-a-git-provider-access-token.adoc
@@ -33,7 +33,7 @@ metadata:
   annotations:
     che.eclipse.org/che-userid: _<Che user ID>_ <1>
     che.eclipse.org/scm-personal-access-token-name: <git provider name, e.g. github>
-    che.eclipse.org/scm-url: <git provider endpoint> <2>
+    che.eclipse.org/scm-url: _<Git provider endpoint>_ <2>
     che.eclipse.org/scm-userid: <git provider user id> <3>
     che.eclipse.org/scm-username: <git provider username>
 data:
