--- a/modules/end-user-guide/pages/configuring-a-git-provider-access-token.adoc
+++ b/modules/end-user-guide/pages/configuring-a-git-provider-access-token.adoc
@@ -34,7 +34,7 @@ metadata:
     che.eclipse.org/che-userid: _<Che user ID>_ <1>
     che.eclipse.org/scm-personal-access-token-name: <git provider name, e.g. github>
     che.eclipse.org/scm-url: _<Git provider endpoint>_ <2>
-    che.eclipse.org/scm-userid: <git provider user id> <3>
+    che.eclipse.org/scm-userid: _<Git provider user ID>_ <3>
     che.eclipse.org/scm-username: <git provider username>
 data:
   token: __<Base64 encoded token>__
