--- a/modules/end-user-guide/pages/configuring-a-git-provider-access-token.adoc
+++ b/modules/end-user-guide/pages/configuring-a-git-provider-access-token.adoc
@@ -41,7 +41,7 @@ data:
 type: Opaque
 ----
 +
-<1> Che user id. Retrieve `<che-endpoint>/api/user` to get the che user data.
+<1> Che user ID. Retrieve `__<che-endpoint>__/api/user` to get the Che user data.
 <2> Git provider URL.
 <3> Git provider User id. See the specific Git provider API docs, to get the user id.
 +
