--- a/modules/end-user-guide/pages/configuring-a-git-provider-access-token.adoc
+++ b/modules/end-user-guide/pages/configuring-a-git-provider-access-token.adoc
@@ -43,7 +43,7 @@ type: Opaque
 +
 <1> Che user ID. Retrieve `__<che-endpoint>__/api/user` to get the Che user data.
 <2> Git provider URL.
-<3> Git provider User id. See the specific Git provider API docs, to get the user id.
+<3> Git provider user ID. See the specific Git provider API docs to get the user ID.
 +
 [TIP]
 ====
